@@ -18055,6 +18055,17 @@
   ""
   [(set_attr "type" "multi")])
 
+(define_insn_and_split "*pushv2di"
+  [(set (match_operand:V2DI 0 "push_operand" "=<")
+	(match_operand:V2DI 1 "nonmemory_operand" "x"))]
+  "TARGET_SSE2"
+  "#"
+  ""
+  [(set (reg:SI 7) (plus:SI (reg:SI 7) (const_int -16)))
+   (set (mem:V2DI (reg:SI 7)) (match_dup 1))]
+  ""
+  [(set_attr "type" "multi")])
+
 (define_insn_and_split "*pushv8hi"
   [(set (match_operand:V8HI 0 "push_operand" "=<")
 	(match_operand:V8HI 1 "nonmemory_operand" "x"))]
